# ios-fastlane-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
docs/release/: APP_STORE_REVIEW_NOTES_TEMPLATE.md  MAC_APP_STORE_RELEASE_CHECKLIST.md  PRIVACY_DISCLOSURE_TEMPLATE.md
scripts/: build_release.sh  generate_macos_icons.sh  release_mas.sh  smoke_check.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/lib/: defaultConfig.ts  tauri.ts
